--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.16",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -18,7 +19,9 @@
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "ai": "^4.0.33",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
